--- a/ui/index.html
+++ b/ui/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Forum</title>
-  <link rel="stylesheet" href="ui/css/index.css" />
-    <link rel="stylesheet" href="ui/css/chat.css" />
+  <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/chat.css" />
 
-  <link rel="icon" type="image/svg+xml" href="/ui/assets/logo.svg">
+  <link rel="icon" type="image/svg+xml" href="assets/logo.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700;900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -44,9 +44,9 @@
 
   <footer id="333" class="footer">
     2026 <span class="footer-brand">4um</span> — Built with passion
-  </footer>
-    <script type="module" src="/js/main.js"></script>
+  </footer>.likebtn,
 
+    <script type="module" src="js/main.js"></script>
 
 </body>
 </html>
