removed the adding text

--- a/ui/index.html
+++ b/ui/index.html
@@ -44,7 +44,7 @@
 
   <footer id="333" class="footer">
     2026 <span class="footer-brand">4um</span> — Built with passion
-  </footer>.likebtn,
+  </footer>
 
     <script type="module" src="js/main.js"></script>
 
